<resources>

    <string name="app_name">cards</string>

    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Сохранить</string>
    <string name="confirm_dialog_title">\?</string>


    <string name="db_request_err_message">Ошибка при запросе к базе данных</string>
    <string name="common_err_message">Что-то пошло не так</string>


    <string name="feature_themes_list_title">по темам</string>

    <string name="fragment_dialog_pack_import_title">Importing....</string>
    <string name="fragment_dialog_pack_import_error_msg">Error on pack importing</string>

    <string name="fragment_dialog_batch_import_title">Importing....</string>
    <string name="fragment_dialog_batch_import_error_msg">Error on batch importing</string>

    <string name="fragment_dialog_batch_export_title">Exporting....</string>
    <string name="fragment_dialog_batch_export_error_msg">Error on batch exporting</string>


    <string name="cards_view_no_course_msg">Some error</string>
    <string name="cards_view_some_err_msg">Some error</string>
    <string name="cards_view_no_cards_msg">Empty pack</string>



    <!-- favorites -->
    <string name="favorites_view_all_cards_button">все избранные карточки</string>
    <string name="favorites_view_all_cards_button_arg">все избранные карточки (%s)</string>
    <string name="favorites_view_from_packs_button">избранные из наборов</string>

    <!-- views history -->
    <string name="views_history_empty_theme_title">..</string>
    <string name="views_history_empty_viewed_count">Просмотрено: %1$s/%2$s</string>
    <string name="views_history_empty_errors_count">Ошибок: %s</string>

    <!-- packs with favorite cards -->
    <string name="qpacks_with_favs_action_button_title">Смотреть</string>
    <string name="qpacks_with_favs_no_selected_packs">Не выбрано ни одного набора</string>

    <string name="schedule_edit_title">Schedule:</string>
    <string name="schedule_none">--</string>
    <string name="schedule_clear_btn">clear</string>
    <string name="schedule_new_item_title">schedule new item:</string>
    <string name="schedule_item_clear_btn">X</string>
    <string name="schedule_item_add_btn">add</string>


    <string name="default_schedule_title">default</string>


    <string name="fragment_courses_title">repeat courses</string>
    <string name="fragment_courses_courses_loading_err">Ошибка загрузки курсов</string>
    <string name="fragment_courses_course_add_err">Ошибка при добавлении курса</string>
    <string name="fragment_courses_get_qpack_err">Ошибка при получении пака</string>
    <string name="fragment_courses_menu_item_add">new course</string>
    <!--string name="fragment_courses_menu_to_themes">to themes</string-->
    <string name="fragment_courses_menu_to_email">send all to...</string>


    <string name="additional_learn_course_title">additional {0} cards</string>
    <string name="additional_learn_course_title_with_subtitle">{1}: additional {0} cards</string>


    <string name="notifications_new_repeats_title">New repeats</string>
    <string name="notifications_new_repeats_text">You have cards to repeat</string>
    <string name="notifications_learn_waitings_title">New courses</string>
    <string name="notifications_learn_waitings_text">You have cards to learn.</string>

    <string name="notifications_uncompleted_title">Uncompleted...</string>
    <string name="notifications_uncompleted_text">There is uncompleted learns or repeats.</string>
    <!--string name="notifications_uncompleted_repeats_title">Uncompleted...</string>
    <string name="notifications_uncompleted_repeats_text">There is uncompleted repeats.</string-->


    <string name="course_info_card_count">{0} cards</string>
    <string name="course_info_status">status:</string>
    <string name="course_info_status_preparing">preparing</string>
    <string name="course_info_status_learn_waiting">урок запланирован через {0}</string>
    <string name="course_info_status_learning">просмотрено {0}</string>
    <string name="course_info_status_repeat_waiting">повторение через {0}</string>
    <string name="course_info_status_repeating">повторено {0}</string>
    <string name="course_info_status_completed">обучение завершено</string>

    <string name="course_info_menu_delete">удалить</string>

    <string name="course_info_schedule_title">расписание:</string>
    <string name="course_info_schedule_is_completed">(завершено)</string>
    <string name="course_info_schedule_is_empty">(нет)</string>

    <string name="course_info_btn_complete_preparing">начать обучение:</string>
    <string name="course_info_btn_start_learning">начать обучение</string>
    <string name="course_info_btn_learn">учиться</string>
    <string name="course_info_btn_continue_learning">продолжить</string>
    <string name="course_info_btn_repeat_now">повторить сейчас</string>
    <string name="course_info_btn_repeat">повторить</string>
    <string name="course_info_btn_continue_repeating">продолжить</string>

    <string name="course_info_extra_repeating_confirm">Будет запущено внеплановое повторение</string>



    <string name="preferences_db_managment">Управление данными</string>
    <string name="preferences_reset_db">Удалить все данные</string>
    <string name="preferences_reset_db_summary">Все карточки и курсы будут утеряны безвозвратно</string>

    <string name="clear_db_title">Очистка...</string>
    <string name="clear_db_error">Ошибка при удалении базы данных</string>
    <string name="clear_db_confirmation_msg">Все карточки и курсы будут удалены безвозвратно. Удалить?</string>
    <string name="bottom_sheet_cards_title">Карточки</string>

    <!-- TODO remove -->
    <string name="main_drawer_open_nav_drawer">открыть</string>
    <string name="main_drawer_close_nav_drawer">закрыть</string>

    <string name="courses_list_is_empty">курсы отсутствуют</string>
    <string name="courses_list_select_title">выбор курса</string>

    <string name="edit_text_block_hint">Редактирование текста</string>
    <string name="edit_text_context_edit">редактировать</string>

    <string name="qpacks_menu_item_sort">сортировка</string>
    <string name="qpacks_menu_item_by_last_view_date">давно просмотренные</string>
    <string name="qpacks_menu_item_by_creation_date">недавно созданные</string>
    <string name="qpacks_request_error">Ошибка при запросе списка</string>
    <string name="qpacks_search_hint">Поиск</string>
    <string name="qpacks_favorites_check_box_title">Избранные</string>


</resources>
