<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        style="@style/AppTheme.screenHeader"
        android:text="@string/schedule_edit_title"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        >
        <TextView
            android:id="@+id/schedule_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            style="@style/AppTheme.subHeader"
            android:text="@string/schedule_none"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_clear_btn"
            style="@style/AppTheme.controlButton"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            style="@style/AppTheme.subHeader"
            android:text="@string/schedule_new_item_title"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/item_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="---"
                style="@style/AppTheme.controlButton"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/item_clear_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_item_clear_btn"
                style="@style/AppTheme.controlButton"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/item_add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_item_add_btn"
                style="@style/AppTheme.controlButton"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/schedule_item_btns"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
        </LinearLayout>

    </LinearLayout>

</LinearLayout>